--- a/club-manager/src/app/members/member-update/member-update.component.html
+++ b/club-manager/src/app/members/member-update/member-update.component.html
@@ -10,7 +10,15 @@
             <input matInput formControlName="alias">
           </mat-form-field>
           <mat-icon class="icon-button" (click)="getAlias()">build_circle</mat-icon>
-        </p>
+
+          <mat-form-field class="column2-field-short">
+            <mat-label>Externe Id</mat-label>
+            <input matInput required formControlName="externalid">
+            <mat-error *ngIf="myForm.get('externalid').hasError('required')">
+              Id erforderlich
+            </mat-error>
+          </mat-form-field>
+      </p>
       <p>
         <mat-form-field class="field-short">
           <mat-label>Anrede</mat-label>
@@ -177,7 +185,7 @@
             Die Jahreszahl muss größer 1955 sein
           </mat-error>
           <mat-error *ngIf="myForm.get('bronze').hasError('max')">
-            Die Jahreszahl muss kleiner 2050 sein
+            Die Jahreszahl darf nicht größer {{currentYear}} sein
           </mat-error>
         </mat-form-field>
 
@@ -188,7 +196,7 @@
             Die Jahreszahl muss größer 1955 sein
           </mat-error>
           <mat-error *ngIf="myForm.get('silver').hasError('max')">
-            Die Jahreszahl muss kleiner 2050 sein
+            Die Jahreszahl darf nicht größer {{currentYear}} sein
           </mat-error>
         </mat-form-field>
 
@@ -199,7 +207,7 @@
             Die Jahreszahl muss größer 1955 sein
           </mat-error>
           <mat-error *ngIf="myForm.get('gold').hasError('max')">
-            Die Jahreszahl muss kleiner 2050 sein
+            Die Jahreszahl darf nicht größer {{currentYear}} sein
           </mat-error>
         </mat-form-field>
 
@@ -210,7 +218,7 @@
             Die Jahreszahl muss größer 1955 sein
           </mat-error>
           <mat-error *ngIf="myForm.get('active44').hasError('max')">
-            Die Jahreszahl muss kleiner 2050 sein
+            Die Jahreszahl darf nicht größer {{currentYear}} sein
           </mat-error>
         </mat-form-field>
       </p>
@@ -223,7 +231,7 @@
             Die Jahreszahl muss größer 1955 sein
           </mat-error>
           <mat-error *ngIf="myForm.get('active55').hasError('max')">
-            Die Jahreszahl muss kleiner 2050 sein
+            Die Jahreszahl darf nicht größer {{currentYear}} sein
           </mat-error>
         </mat-form-field>
 
@@ -234,7 +242,7 @@
             Die Jahreszahl muss größer 1955 sein
           </mat-error>
           <mat-error *ngIf="myForm.get('active66').hasError('max')">
-            Die Jahreszahl muss kleiner 2050 sein
+            Die Jahreszahl darf nicht größer {{currentYear}} sein
           </mat-error>
         </mat-form-field>
 
@@ -245,7 +253,7 @@
             Die Jahreszahl muss größer 1955 sein
           </mat-error>
           <mat-error *ngIf="myForm.get('active77').hasError('max')">
-            Die Jahreszahl muss kleiner 2050 sein
+            Die Jahreszahl darf nicht größer {{currentYear}} sein
           </mat-error>
         </mat-form-field>
 
@@ -256,7 +264,7 @@
             Die Jahreszahl muss größer 1955 sein
           </mat-error>
           <mat-error *ngIf="myForm.get('active88').hasError('max')">
-            Die Jahreszahl muss kleiner 2050 sein
+            Die Jahreszahl darf nicht größer {{currentYear}} sein
           </mat-error>
         </mat-form-field>
       </p>
@@ -269,7 +277,7 @@
             Die Jahreszahl muss größer 1955 sein
           </mat-error>
           <mat-error *ngIf="myForm.get('goldlion').hasError('max')">
-            Die Jahreszahl muss kleiner 2050 sein
+            Die Jahreszahl darf nicht größer {{currentYear}} sein
           </mat-error>
         </mat-form-field>
 
@@ -285,7 +293,7 @@
             Die Jahreszahl muss größer 1955 sein
           </mat-error>
           <mat-error *ngIf="myForm.get('goldlionbrilliant').hasError('max')">
-            Die Jahreszahl muss kleiner 2050 sein
+            Die Jahreszahl darf nicht größer {{currentYear}} sein
           </mat-error>
         </mat-form-field>
       </p>
@@ -298,7 +306,7 @@
             Die Jahreszahl muss größer 1955 sein
           </mat-error>
           <mat-error *ngIf="myForm.get('tributmember').hasError('max')">
-            Die Jahreszahl muss kleiner 2050 sein
+            Die Jahreszahl darf nicht größer {{currentYear}} sein
           </mat-error>
         </mat-form-field>
       </p>
