--- a/club-manager/src/app/_general/footer-pagination/footer-pagination/footer-pagination.component.html
+++ b/club-manager/src/app/_general/footer-pagination/footer-pagination/footer-pagination.component.html
@@ -1,4 +1,4 @@
 <div class="pag">
-  <mat-paginator fixed [length]="pageTotalCount" [pageSize]="pageCount" [pageSizeOptions]="[5, 10, 25, 50, 100]">
+  <mat-paginator fixed color="primary" (page)="onChangePage()"  [length]="length" [pageSize]="pageSize" [pageSizeOptions]=pageSizeOptions>
   </mat-paginator>
 </div>
