Fuszeile an der korrekte Position, korrekter Close button

--- a/club-manager/src/app/_shared/variables.sass
+++ b/club-manager/src/app/_shared/variables.sass
@@ -1,2 +1,4 @@
 // Globale Werte
-$base-workspace: calc(100vh - 120px)
+$base-workspace: calc(100vh - 160px)
+$base-menu: calc(100vh - 115px)
+$base-table: calc(100vh - 160px)
