--- a/club-manager/src/app/app.component.scss
+++ b/club-manager/src/app/app.component.scss
@@ -18,6 +18,7 @@
 .right {
   position: absolute;
   right: 0px;
+
 }
 
 // Menü
@@ -29,6 +30,7 @@
   padding: 0px;
   border: 0px;
   width: 65px;
+  height:  $base-menu;
 }
 
 .maxMenu {
@@ -37,6 +39,7 @@
   top: 60px;
   padding: 0px;
   width: 133px;
+  height:  $base-menu;
 }
 
 .minMenuButton {
@@ -77,7 +80,7 @@
 
 .workspace {
   //position: fixed;
-  //background-color: rgb(255, 255, 255);
+  //background-color: rgb(192, 74, 74);
   height: $base-workspace;
 }
 
