--- a/club-manager/src/app/_general/settings/settings/settings.component.html
+++ b/club-manager/src/app/_general/settings/settings/settings.component.html
@@ -1,3 +1,4 @@
+<form [formGroup]="myForm">
 <mat-tab-group>
 
   <mat-tab label="Allgemein">
@@ -12,25 +13,41 @@
   <mat-tab label="Mitglieder">
     <div class="modul">
       <p>
-        <button mat-raised-button type="submit" (click)="onTest()" color="primary" class="button">Ausführen</button>
+        <button mat-raised-button type="submit" (click)="onCreateAlias()" color="primary" class="button">Ausführen</button>
         <mat-label class="label">Alle Kurznamen neu erzeugen</mat-label>
       </p>
 
       <p>
-        <button mat-raised-button type="submit" (click)="onTest()" color="primary" class="button">Ausführen</button>
+        <button mat-raised-button type="submit" (click)="onCreateFamily()" color="primary" class="button">Ausführen</button>
         <mat-label class="label">Alle Familien Abhängigkeiten neu erzeugen</mat-label>
       </p>
 
       <p>
-        <button mat-raised-button type="submit" (click)="onTest()" color="primary" class="button">Ausführen</button>
-        <mat-label class="label">Alle Aktivenjahre neu berechnen</mat-label>
+        <button mat-raised-button type="submit" (click)="onDetermineActiveYears()" color="primary" class="button">Ausführen</button>
+        <mat-label class="label">Alle Aktivenjahre /-punkte neu berechnen</mat-label>
       </p>
 
       <p>
-        <button mat-raised-button type="submit" (click)="onTest()" color="primary" class="button">Ausführen</button>
-        <mat-label class="label">Alle Aktivenpunkte neu berechnen</mat-label>
-    </p>
-  </div>
+        <button mat-raised-button type="submit" (click)="onDetermineActiveState()" color="primary" class="button">Ausführen</button>
+        <mat-label class="label">Aktiven-Status für alle setzen</mat-label>
+
+        <mat-form-field class="column2-field-short">
+          <mat-label>Jahr</mat-label>
+          <input matInput formControlName="year">
+            <mat-error *ngIf="myForm.get('year').hasError('pattern')">
+              Es sind nur Ziffern zulässig
+            </mat-error>
+            <mat-error *ngIf="myForm.get('year').hasError('min')">
+              Die Jahreszahl muss größer 1955 sein
+            </mat-error>
+            <mat-error *ngIf="myForm.get('year').hasError('max')">
+              Die Jahreszahl darf nicht größer {{currentYear}} sein
+            </mat-error>
+          </mat-form-field>
+        </p>
+
+    </div>
   </mat-tab>
 
 </mat-tab-group>
+</form>
