--- a/club-manager/src/app/activity/activity-list/activity-list.component.html
+++ b/club-manager/src/app/activity/activity-list/activity-list.component.html
@@ -1,1 +1,20 @@
-<h2>Liste mit Aktivitäten der Mitlgieder</h2>
+<div class="table-container">
+  <table mat-table  [dataSource]="activity$">
+    <!-- Header -->
+    <ng-container [matColumnDef]="col.Name" *ngFor="let col of displayedColumns; let i = index" >
+      <th mat-header-cell *matHeaderCellDef [class]="col.Width">
+          {{col.Label}}
+      </th>
+      <td mat-cell [class]="col.Width" *matCellDef="let history">{{history[col.Name]}}
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumnNames; sticky:true" class="header-row"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumnNames" class="table-row"></tr>
+  </table>
+</div>
+
+<div class="spinner-text" *ngIf="loading async">Daten werden geladen</div>
+<div class="spinner-container" *ngIf="loading async">
+  <mat-spinner value="100" mode="determinate" diameter="40"></mat-spinner>
+</div>
