--- a/club-manager/src/app/members/member-resign/member-resign.component.html
+++ b/club-manager/src/app/members/member-resign/member-resign.component.html
@@ -18,6 +18,7 @@
           <option value="a">Austritt</option>
           <option value="v">Verstorben</option>
           <option value="k">Konto erloschen</option>
+          <option value="c">Kontakt verloren</option>
         </select>
         <mat-error *ngIf="resignForm.get('resignreason').hasError('required')">
           Austrittsgrund ist erforderlich
