--- a/club-manager/src/app/members/member-update/member-update.component.html
+++ b/club-manager/src/app/members/member-update/member-update.component.html
@@ -296,6 +296,11 @@
             Die Jahreszahl darf nicht größer {{currentYear}} sein
           </mat-error>
         </mat-form-field>
+
+        <mat-form-field class="column2-field-short">
+          <mat-label>Brilliant Nummer</mat-label>
+          <input matInput formControlName="goldlionbrilliantnr">
+        </mat-form-field>
       </p>
 
       <p>
