--- a/club-manager/src/app/activity/activity-header/activity-header.component.html
+++ b/club-manager/src/app/activity/activity-header/activity-header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="accent">
   <span>Aktivitäten</span>
-  <mat-icon class="add-icon">add_circle</mat-icon>
+  <mat-icon id="add-icon" class="material-icons-round">add_circle</mat-icon>
 
   <div class="search">
     <mat-icon class="search-icon">search</mat-icon>Filter:
