--- a/club-manager/src/app/activity/activity-list/activity-list.component.html
+++ b/club-manager/src/app/activity/activity-list/activity-list.component.html
@@ -5,7 +5,7 @@
       <th mat-header-cell *matHeaderCellDef [class]="col.Width">
           {{col.Label}}
       </th>
-      <td mat-cell [class]="col.Width" *matCellDef="let history">{{history[col.Name]}}
+      <td mat-cell [class]="col.Width" *matCellDef="let activity">{{activity[col.Name]}}
       </td>
     </ng-container>
 
