Activity-Table with search

--- a/club-manager/src/app/activity/activity-header/activity-header.component.html
+++ b/club-manager/src/app/activity/activity-header/activity-header.component.html
@@ -4,9 +4,13 @@
 
   <div class="search">
     <mat-icon class="search-icon">search</mat-icon>Filter:
-    <mat-form-field class="search-input">
-    <input  matInput placeholder="nach Kurzname, Vor- und Nachnamen, Jahr" #input>
-  </mat-form-field>
+    <mat-form-field class="search-input1">
+     <input  matInput placeholder="nach Kurzname, Vor- und Nachnamen" #input1>
+    </mat-form-field>
+
+    <mat-form-field class="search-input2">
+      <input  matInput placeholder="nach Jahr" #input2>
+    </mat-form-field>
   </div>
 
   <div class="toolbar-right">
