--- a/club-manager/src/app/activity/activity-header/activity-header.component.scss
+++ b/club-manager/src/app/activity/activity-header/activity-header.component.scss
@@ -29,7 +29,12 @@
   font-size: 12pt;
 }
 
-.search-input {
+.search-input1 {
   margin-left: 5px;
+  font-size:8pt;
+}
+
+.search-input2 {
+  margin-left: 15px;
   font-size:8pt;
 }
