Fußzeile für Activity

--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -155,7 +155,7 @@
       </span>
       <span *ngSwitchCase="1">
         <div class="footer-comp">
-          <cl-footer-pagination></cl-footer-pagination>
+          <cl-member-footer-pagination></cl-member-footer-pagination>
         </div>
       </span>
       <span *ngSwitchCase="2">
@@ -165,7 +165,7 @@
       </span>
       <span *ngSwitchCase="3">
         <div class="footer-comp">
-          <cl-footer-empty></cl-footer-empty>
+          <cl-activity-footer-pagination></cl-activity-footer-pagination>
         </div>
       </span>
       <span *ngSwitchCase="4">
