Delete Member, Umschaltung auf Mitglieder Ablage

--- a/club-manager/src/app/_general/settings/settings/settings.component.html
+++ b/club-manager/src/app/_general/settings/settings/settings.component.html
@@ -47,7 +47,7 @@
         </p>
 
         <p>
-          <mat-checkbox formControlName="storage" color="primary" class="button" (click)="onStorage()">Mitglieder Ablage anzeigen anstatt Mitgliederliste</mat-checkbox>
+           <mat-checkbox formControlName="resignMemList" color="primary" class="button" (click)="onResignMemberList()">Mitglieder Ablage anzeigen anstatt Mitgliederliste</mat-checkbox>
         </p>
 
     </div>
