--- a/club-manager/src/app/members/member-update/member-update.component.html
+++ b/club-manager/src/app/members/member-update/member-update.component.html
@@ -349,5 +349,5 @@
 
   <button mat-raised-button type="submit" (click)="onCancel()" color="primary" class="ok-button">Abbrechen</button>
   <button mat-raised-button [disabled]="myForm.invalid" type="submit" (click)="onUpdate()" color="primary" class="ok-button">Speichern</button>
-  <button mat-raised-button (click)="onDelete()" color="primary" class="del-button">Entfernen</button>
+  <button mat-raised-button (click)="onDelete()" color="primary" class="del-button"> {{ resignText == true ? 'Löschen' : 'Entfernen' }}</button>
 </form>
