--- a/club-manager/src/app/members/member-update/member-update.component.scss
+++ b/club-manager/src/app/members/member-update/member-update.component.scss
@@ -35,12 +35,16 @@
   margin-left: 16px;
 }
 
+.cancel-button {
+  margin-left: 50px;
+}
+
 .del-button {
-  margin-left: 80px;
+  margin-left: 16px;
 }
 
 .icon-button {
-  margin-left: 16px;
+  margin-left: -20px;
 }
 
 .icon-button:hover {
@@ -56,4 +60,34 @@
   height: 600px;
   max-width: 750px;
   max-height: 600px;
+}
+
+.member-intro-modul {
+  //position: fixed;
+  overflow:auto;
+  margin-top: 10px;
+  margin-left: 0px;
+  margin-bottom: 0px;
+  width: 300px;
+  height: 180px;
+  border: 2px;
+ // background-color: red;
+}
+
+.member-ext-modul {
+  float: auto;
+  margin-top: -170px;
+  margin-left: 310px;
+  width: 300px;
+  height: 130px;
+  border: 2px;
+  border-style: solid;
+  border-radius: 25px;
+  border-color: rgb(214, 206, 206);
+  //background-color: blue;
+}
+
+.member-modul {
+  padding-top: 16px ;
+  //background-color: green;
 }
