Mitgliedsjahre und Alter

--- a/club-manager/src/app/_general/settings/settings/settings.component.html
+++ b/club-manager/src/app/_general/settings/settings/settings.component.html
@@ -19,12 +19,17 @@
 
       <p>
         <button mat-raised-button type="submit" (click)="onCreateFamily()" color="primary" class="button">Ausführen</button>
-        <mat-label class="label">Alle Familien Abhängigkeiten neu erzeugen</mat-label>
+        <mat-label class="label">Alle Familien Beziehungen neu ermitteln</mat-label>
       </p>
 
       <p>
         <button mat-raised-button type="submit" (click)="onDetermineActiveYears()" color="primary" class="button">Ausführen</button>
-        <mat-label class="label">Alle Aktivenjahre und Goldene Löwe Punkte neu berechnen</mat-label>
+        <mat-label class="label">Alle Mitglieds-, Aktivenjahre und Goldene Löwe Punkte neu berechnen</mat-label>
+      </p>
+
+      <p>
+        <button mat-raised-button type="submit" (click)="onCalcAge()" color="primary" class="button">Ausführen</button>
+        <mat-label class="label">Für alle Mitglieder das Alter neu berechnen</mat-label>
       </p>
 
       <p>
